Fixed level 4 and 5 spacing issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ img.logo {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(386%, 356%) skew(-4deg, 1deg);
+  transform: translate(431%, 389%) skew(-4deg, 1deg);
 }
 
 img.basket {
@@ -30,7 +30,7 @@ img.basket {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(41%, 222%);
+  transform: translate(31%, 245%);
 
 }
 
@@ -109,15 +109,18 @@ img.basket {
 
 .options {
   /*height: 50px;*/
-  display: flex;
+  /*display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;*/
   /*border: 2px solid blue;*/
   padding: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
+  text-align: center;
 }
-
+.options > div {
+  display: inline-block;
+}
 .promptPic {
   /*border: 4px outset transparent;*/
   border-radius: 10px;
@@ -191,13 +194,13 @@ img.basket {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(256%,88%)}
+  transform: translate(287%,101%)}
 
 .app {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(38%, 26%);
+  transform: translate(38%, 12%);
   /*not sure if needed*/
   width: 60%;
 }
